--- a/src/app/demo/components/crea-tu-playera/crea-tu-playera.component.html
+++ b/src/app/demo/components/crea-tu-playera/crea-tu-playera.component.html
@@ -52,16 +52,69 @@
             </div>
         </div>
     </div>
+    <!----------------------------------- The Printbar Table ---------------------------------------->
+    <div class="card col-12 px-6 py-6 ">
+        <p-toolbar styleClass="mt-4">
+            <ng-template pTemplate="left">
+                <div class="my-2 flex gap-4 align-items-center">
+                    <h1 class="mb-0 mr-2">The Printbar status updated</h1>
+                </div>
+            </ng-template>
+
+            <ng-template pTemplate="right">
+            </ng-template>
+        </p-toolbar>
+        <div class="mt-2">
+            <div>
+                <p-table [value]="tpbOrders" [scrollable]="true" scrollHeight="400px" [tableStyle]="{'min-width': '50rem'}">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Site order ID</th>
+                            <th>Order ID</th>
+                            <th>TPB ID</th>
+                            <th>Date</th>
+                            <th>Status</th>
+                            <th>Signal</th>
+                            <th>Carrier</th>
+                            <th>Tracking URL</th>
+                            <th>Tracking number</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-order>
+                        <tr [ngClass]="{'bg-green-300': order.updated}">
+                            <td>{{order.order_number}}</td>
+                            <td>{{order.order_id}}</td>
+                            <td>{{order.reference_id}}</td>
+                            <td>{{order.date}}</td>
+                            <td>{{order.tpb_status}}</td>
+                            <td>{{order.tpb_signal}}</td>
+                            <td>{{order.carrier}}</td>
+                            <td>{{order.tracking_url}}</td>
+                            <td>{{order.tracking_number}}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
+        </div>
+    </div>
     <!----------------------------------- SwiftPOD Table --------------------------------------------->
+    <p-toast position="bottom-right" key="br" />
     <div class="card col-12 px-6 py-6 ">
         <p-toolbar styleClass="mt-4">
             <ng-template pTemplate="left">
                 <div class="my-2 flex gap-4 align-items-center">
                     <h1 class="mb-0 mr-2">SwiftPOD status updated</h1>
                 </div>
+                
             </ng-template>
 
             <ng-template pTemplate="right">
+                <div class="flex gap-5 justify-content-between">
+                    <span *ngFor="let store of ordersByStore"><h4>{{store.site_name}}: {{store.count}}</h4></span>
+                    <!-- <span><h4>Amazon: </h4></span>
+                    <span><h4>eBay: </h4></span>
+                    <span><h4>Etsy: </h4></span> -->
+                </div>
             </ng-template>
         </p-toolbar>
         <div class="mt-2">
@@ -100,4 +153,14 @@
             </div>
         </div>
     </div>
+    <button pButton pRipple class="p-button-primary mb-3"
+    [disabled] = "ordersWithoutUpdate.length == 0"
+    (click)="processOrdersWithoutUpdate()">
+    <ng-container *ngIf="!processing; else loading">
+        Orders without update
+    </ng-container>
+    <ng-template #loading>
+        <i class="pi pi-spin pi-spinner" style="font-size: 1.5rem"></i>
+    </ng-template>
+    </button>
 </div>
