--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@ $gutter: 1rem; //for primeflex grid system
 
 /* PrimeNG */
 @import "../node_modules/primeng/resources/primeng.min.css";
+// @import "../node_modules/primeng/resources/themes/soho-dark/theme.css";
+// @import "../node_modules/primeng/resources/primeng.css";
 @import "../node_modules/primeflex/primeflex.scss";
 @import "../node_modules/primeicons/primeicons.css";
 
@@ -119,6 +121,20 @@ $gutter: 1rem; //for primeflex grid system
 
 .p-dropdown {
     width: 100% !important;
+}
+
+.button-export{
+    .p-button{
+        background: #008000 !important;
+        border: 1px solid #008000;
+    }
+}
+
+.btn-download{
+    .p-button{
+        background: #e81118 !important;
+        border: 1px solid #e81118;
+    }
 }
 
 .rotate {
