Exportacion de listing listo

--- a/src/app/demo/components/listing-generator/listing-generator.component.scss
+++ b/src/app/demo/components/listing-generator/listing-generator.component.scss
@@ -46,3 +46,21 @@
     background-size: 100% 100%;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23b5b7b9' fill-rule='evenodd' d='M7.793 19.707a1 1 0 0 1 0-1.414L14.086 12L7.793 5.707a1 1 0 0 1 1.414-1.414l6.293 6.293a2 2 0 0 1 0 2.828l-6.293 6.293a1 1 0 0 1-1.414 0' clip-rule='evenodd'/%3E%3C/svg%3E");
 }
+
+.hugeicons--link-04 {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%234F46E5' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' color='%234F46E5'%3E%3Cpath d='M10 13.229q.213.349.504.654a3.56 3.56 0 0 0 4.454.59q.391-.24.73-.59l3.239-3.372c1.43-1.49 1.43-3.904 0-5.394a3.564 3.564 0 0 0-5.183 0l-.714.743'/%3E%3Cpath d='m10.97 18.14l-.713.743a3.564 3.564 0 0 1-5.184 0c-1.43-1.49-1.43-3.905 0-5.394l3.24-3.372a3.564 3.564 0 0 1 5.183 0q.291.305.504.654'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+.hugeicons--unlink-04 {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23838297' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' color='%23838297'%3E%3Cpath d='M10 13.229q.213.349.504.654a3.56 3.56 0 0 0 4.454.59q.391-.24.73-.59l3.239-3.372c1.43-1.49 1.43-3.904 0-5.394a3.564 3.564 0 0 0-5.183 0l-.714.743'/%3E%3Cpath d='m10.97 18.14l-.713.743a3.564 3.564 0 0 1-5.184 0c-1.43-1.49-1.43-3.905 0-5.394l3.24-3.372a3.564 3.564 0 0 1 5.183 0q.291.305.504.654M21 16h-2.079M16 21v-2.079M3 8h2.079M8 3v2.079'/%3E%3C/g%3E%3C/svg%3E");
+  }
